# DTEAM-django-practical-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CVProject/: celery.py  settings.py  urls.py
audit/: middleware.py  models.py  tests.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: recent_logs.html
main/: models.py  tasks.py  tests.py  urls.py  views.py
main/context_processors/: settings_context.py
main/fixtures/: sample_cv.json
main/migrations/: 0001_initial.py
main/templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  settings.html
